# Exploring_Parallelism_in_Cryptographic_Algorithms

source_code_cpp/AES/: CMakeLists.txt  README.md  main.cu
source_code_cpp/AES/Utils/: Generator.h  sampler.h
source_code_cpp/AES/cu/: AEScu.cu  AEScu.h
source_code_cpp/AES/serial/: AESSerial.cpp  AESSerial.h  CONSTANTS.h  DebugUtil.h
source_code_cpp/AES/thread/: AESOpenMP.cpp  AESOpenMP.h  AESThreaded.cpp  AESThreaded.h
source_code_cpp/ECC/: ReadMe.txt
source_code_cpp/ECC/paralleCPUoptimization/: ecc_omp.cpp
source_code_cpp/ECC/parallelCPU_nooptimization/: ecc_omp.cpp
source_code_cpp/ECC/parallelGPU/: 123.cu
source_code_cpp/ECC/serialCPU/: Mod.h  serial.cpp
source_code_cpp/RSA/: README.txt  RSA_Packing  RSA_Packing.cpp  RSA_Serial  RSA_Serial.cpp  ciphertext_parallel.txt  ciphertext_serial.txt  decrypted_message_serial.txt
source_code_cpp/SHA-256/: ReadMe.txt  cuda_lots_output.cu  simd.c++  simd_avx2.c++  thread_pool.c++
